tests/NormalTests/paczka1/fuzzy1/53850399.err
Error in line 3: CdC6tbzDSD1 S17 69,6
Error in line 14: WR4T S53 40,6
Error in line 12: 1X6Lfq73h1 S53 7,6
Error in line 18: ly9 S53 89,9
Error in line 21: ltMb S53 62,2
Error in line 15: WR4T A75 44,3
Error in line 19: 1X6Lfq73h1 A75 33,5
